--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Build, tag, and push image to Amazon ECR
       env:
-        ECR_REGISTRY:  public.ecr.aws/d2s0x5m0/
+        ECR_REGISTRY:  public.ecr.aws/d2s0x5m0
         ECR_REPOSITORY: risk_classifier
         IMAGE_TAG: ${{ github.sha }}
       run: |
