--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,20 +23,17 @@ jobs:
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
-
+      
     - name: Check out code
       uses: actions/checkout@v2
 
     - name: Build, tag, and push image to Amazon ECR
       env:
-        ECR_REGISTRY:  public.ecr.aws/d2s0x5m0/risk_classifier
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: risk_classifier
         IMAGE_TAG: ${{ github.sha }}
       run: |
         echo "$ECR_REGISTRY"
-        # docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-        # docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        docker build -t risk_classifier .
-        docker tag risk_classifier:latest public.ecr.aws/d2s0x5m0/risk_classifier:latest
-        docker push public.ecr.aws/d2s0x5m0/risk_classifier:latest
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
